estructura index - terminada

--- a/styles/style.css
+++ b/styles/style.css
@@ -339,23 +339,28 @@ background: var(--color-body-ligth);
   padding-bottom: px;
 }
 
-.wait .col-lg-2{
+.card-cruz .col-md-3{
+  display: flex;
+  align-items: center;
+  justify-content: center;
   
-  display: grid;
-  place-content: center;
-  padding: 10px;
-  margin: 3px;
-  border-top-right-radius: 17px;
-  border-bottom-left-radius: 17px;
-  border-bottom-right-radius: 17px;
-  padding-top: 30px;
-  min-width: min-content;
-  border: #2c2c2c38 solid 1px;
-  background-color: var(--color-body-ligth);
-
 }
 
+.equal-height {
+  display: flex;
+  flex-direction: column;
+  height: 70%;
+  background-color: #0d6efd;
+  color: var(--color-body-ligth);
+  box-shadow: 15px 15px 15px #16a359;
 
+}
+.card-body {
+  flex: 1;
+  text-align: center;
+  display: grid;
+  place-content: center;
+}
 
 .circle{
   width: 90px;
@@ -380,39 +385,28 @@ background: var(--color-body-ligth);
 }
 
 
-/*cards nuevas*/
-
-.card-cruz .col-md-3{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  
+.wave-2{
+  height: 20vh;
+  background-image: url(/assets/wave-2.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
 }
-
-.equal-height {
-  display: flex;
-  flex-direction: column;
-  height: 70%;
-  background-color: #0d6efd;
-  color: var(--color-body-ligth);
-  box-shadow: 15px 15px 15px #16a359;
-
-}
-.card-body {
-  flex: 1;
-  text-align: center;
-  display: grid;
-  place-content: center;
-}
-
 /*meet*/ 
+
+.wave-3{
+  height: 25vh;
+  background-image: url(/assets/wave-trabajos.svg);
+  background-repeat: no-repeat;
+  background-size: cover ;
+  background-position: bottom;
+  width: 100%;
+  }
 
 .accordion-item{
   background-color: #ff000000;
 
 }
-
-
 .accordion-button{
   font-size: 0.8em !important;
   background-color: #c0212100;
@@ -467,26 +461,9 @@ background: var(--color-body-ligth);
 .boton2 .btn:hover{
   background-color: var(--color-uno-ban);
 }
-
-.plus{
-  text-align: center;
-}
-
-
-.center-plus{
-  justify-content: center;
-  border-bottom-left-radius: 17px;
-  border-bottom-right-radius: 17px;
-  border: #2c2c2c38 solid 1px;
-  padding-top: 15px;
-  background-color: var(--color-body-ligth);
-}
-
-
  /* section flayers*/
 
  .flayers{
-  padding-bottom: 50px; 
   background-image: url(/assets/wave-flayers.svg);
   background-repeat: no-repeat;
   background-position: top;
@@ -539,6 +516,23 @@ bottom: 0;
 width: 100%;
 height: 5px;
 background: var(--color-primario); 
+}
+
+
+.plus{
+  text-align: center;
+}
+
+.center-plus{
+  justify-content: center;
+  
+}
+
+.center-plus .col-lg-9{
+  border-bottom-left-radius: 17px;
+  border-bottom-right-radius: 17px;
+  border: #2c2c2c38 solid 1px;
+  background-color: var(--color-body-ligth);
 }
 
 /* works */ 
@@ -754,16 +748,6 @@ footer img{
 }
 /*edition h*/ 
 
-
-
-
-h4{
-  display:inline-block;
-  background: var(--color-dos-btn);
-  -webkit-text-fill-color: transparent;
-  -webkit-background-clip: text;
-}
-
 hr{
     width: 50%;
     color:  var(--color-letra);
@@ -771,17 +755,9 @@ hr{
 }
 
 .intro hr,
-.meet hr,
 #blog hr
 {
   margin-left: 25%;
-}
-
-
-/*transition buttom*/
-
-button{
-  transition: all 1.1s;
 }
 
 /*media*/ 
@@ -820,7 +796,7 @@ button{
     
     #a-inicio::after{
       content: "";
-        background:linear-gradient(90deg, rgba(31,20,157,1) 5%, rgba(31,130,227,1) 55%, rgba(26,221,202,1) 93%);
+        background:var(--color-body-ligth);
         position: absolute;
         left: 0;
         top:80%;
@@ -834,7 +810,7 @@ button{
 @media(max-width:768px){
     .nav-item a::after{
         content: "";
-        background: linear-gradient(90deg, rgba(31,20,157,1) 5%, rgba(31,130,227,1) 55%, rgba(26,221,202,1) 93%);
+        background: var(--color-body-ligth);
         position: absolute;
         left: 0;
         top:80%;
@@ -853,14 +829,21 @@ button{
     #bannertop{
       padding-top: 17vh;
     } 
+
+    .botones{
+      display: flex;
+      justify-content: center;
+    }
+    .botones .btn{
+      width: 110px;
+      height: 50px;
+    }
     
     .meet img{
       max-width: 85%;
     }
 
     .plus{
-      padding-bottom: 0px;
-      padding-top: 0px;
       text-align: center;
     }
 
