--- a/styles/about.css
+++ b/styles/about.css
@@ -1,10 +1,9 @@
 :root{
-    --color-primario: #0d1117;
-    --color-secundario:rgba(31,20,157,1);
-    --color-details: rgba(26,221,202,1);
-    --color-body-ligth:#fff;
-    --color-letra: #596169;
-    --color-gradient: linear-gradient(90deg, rgba(31,20,157,1) 5%, rgba(31,130,227,1) 55%, rgba(26,221,202,1) 93%);
+  --color-uno-ban:#0e0b2b;
+  --color-dos-btn:#171347;
+  --color-letra: #2C2C2C;
+  --color-primario: #0d6efd;
+  --color-body-ligth:#f4f6fa;
 }
 
 
@@ -46,34 +45,34 @@ input[type=number]::-webkit-outer-spin-button {
 /*color selection text*/ 
 
 *::selection {
-    background-color: #1863c560;
+    background-color: var(--color-dos-btn);
     color:#fff;
 }
 
 /*scrollbar edit*/ 
 
-body::-webkit-scrollbar{
+/* body::-webkit-scrollbar{
     width: 12px;
-    background: #cac5c5;
+    background: #6c6b74;
 }
 
 body::-webkit-scrollbar-thumb{
-  background: linear-gradient(-45deg, rgba(31,20,157,1) 5%, rgba(31,130,227,1) 55%, rgba(26,221,202,1) 93%);
-    border-radius: 5px;
-}
+  background: var(--color-uno-ban);
+} */
 
 /*cursor*/
 
 .cursor-dot{
     width: 5px;
     height: 5px;
-    background: linear-gradient(90deg, rgb(8, 195, 228) 5%, rgba(31,130,227,1) 55%, rgba(26,221,202,1) 93%);
+    background: var(--color-uno-ban)
 }
 
 .cursor-outline{
     width: 30px;
     height: 30px;
-    border: 1px solid  var(--color-details);
+    border: 1px solid  var(--color-dos-btn);
+    background-color:#17134744;
 }
 
 .cursor-dot,
@@ -109,239 +108,194 @@ body::-webkit-scrollbar-thumb{
   transform: translateX(0);
 }
 
+
 /*header*/ 
 
 #header{
-    background-color: var(--color-body-ligth);
-      position: fixed !important;
-      width: 100%;
-      z-index: 10;
-      font-weight: 400;
-      transition: 0.2s linear 0.2s;
-      box-shadow: 0 0px 5px rgb(0, 0, 0, 0.5);
-  }
-  
-  #header.solid{
-      
-    box-shadow: 0 2px 10px rgb(0, 0, 0, 0.5); 
-  }
+  background-color: var(--color-uno-ban);
+  position: fixed !important;
+  width: 100%;
+  z-index: 10;
+  transition: 0.2s linear 0.2s;
+}
+
+#header.solid{
     
-  #header.off{
-      transform: translateY(-200px)
-  }
+  box-shadow: 0 2px 10px rgb(0, 0, 0, 0.5); 
   
-  /*navbar*/
-  
-  .sr-only {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    border: 0;
-  }
-  
-  .logo{
-      width: 10em;
-  }
-  
-  
-  .nav-link:hover::after{
-      opacity: 0.8;
-      transition: all 0.6s ease 0s;
-  }
-  
-  .nav-item a{
-      position: relative;
-  }
-  
-  .nav-item a::after{
-      content: "";
-  background: linear-gradient(90deg, rgba(31,20,157,1) 5%, rgba(31,130,227,1) 55%, rgba(26,221,202,1) 93%);
-      position: absolute;
-      left: 0;
-      top:80%;
-      width: 100%;
-      height: 2px;
-      opacity: 0;
-      transition: all 0.6s ease;
-  }
-  
-  #a-nosotros::after{
+}
+
+#header.solid::after{
+  display: none;
+}
+
+#header.off{
+    transform: translateY(-200px)
+}
+
+#header::after {
+  content: "";
+  position: absolute;
+  right: 0;
+  left: 0;
+  margin: auto;
+  width: 70%;
+  border-top: 1px solid rgba(255, 255, 255, .2);
+}
+/*navbar*/
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
+}
+
+.navbar-brand{
+  padding: 0;
+}
+
+.logo{
+    width: 10em;
+}
+
+
+.nav-link:hover::after{
+    opacity: 0.8;
+    transition: all 0.6s ease 0s;
+}
+
+.nav-item a{
+    position: relative;
+    color: white;
+}
+
+.nav-item a::after{
     content: "";
-    background: linear-gradient(90deg, rgba(31,20,157,1) 5%, rgba(31,130,227,1) 55%, rgba(26,221,202,1) 93%);
-      position: absolute;
-      left: 0;
-      top:80%;
-      width: 100%;
-      height: 2px;
-      opacity: 1;
-  }
-  
-  .navbar-toggler {
-      border:none;
-      
-  }
-  
-  .navbar-toggler:focus {
-      outline: none;
-      box-shadow: none;
-  }
-  
-  .offcanvas-title img{
-      width: 13em;
-  }
-  
-  .nav-link:hover{
+background: var(--color-body-ligth);
+    position: absolute;
+    left: 0;
+    top:80%;
+    width: 100%;
+    height: 2px;
+    opacity: 0;
+    transition: all 0.6s ease;
+}
+
+#a-nosotros::after{
+  content: "";
+  background: var(--color-body-ligth);
+    position: absolute;
+    left: 0;
+    top:80%;
+    width: 100%;
+    height: 2px;
+    opacity: 1;
+}
+
+.offcanvas{
+  background-color: var(--color-uno-ban);
+} 
+
+.navbar-toggler {
+    border:none;
     
-    color:  rgba(31,130,227,1);
-  }
+}
+
+.navbar-toggler:focus {
+    outline: none;
+    box-shadow: none;
+}
+
+.offcanvas-title img{
+    width: 13em;
+}
+
+.d-lg-none a{
+  color: var(--color-body-ligth);
+}
   
-  .d-lg-none a{
-    color: var(--color-letra);
-  }
-    
-  .in :hover{
-    color: #2f5ec5;
-  }
-  
-  .facebook :hover{
-    color: #3b5998;
-  }
-  
-  .wpp :hover{
-    color:#25D366;
-  }
-  
-  .inst :hover{
-    color:rgb(255, 0, 200)
-  }
+.in :hover{
+  color: #2f5ec5;
+}
+
+.facebook :hover{
+  color: #3b5998;
+}
+
+.wpp :hover{
+  color:#25D366;
+}
+
+.inst :hover{
+  color:rgb(255, 0, 200)
+}
 
 
-  
 /*banner*/ 
 
+#banner{
+  background: var(--color-uno-ban);
+}
+
 #bannertop {
-    color: var(--color-body-ligth);
-    min-height: 55vh;
-    padding-top: 20vh;
-      display: flex;
-      align-items: center;
-      text-align: center;
-      background: rgb(31,20,157);
-      background: linear-gradient(90deg, rgba(31,20,157,1) 5%, rgba(31,130,227,1) 55%, rgba(26,221,202,1) 93%);
-  }
-  
-  #bannertop img{
-    max-width: 100%;
-  }
-  
-  #bannertop h2{
-      font-size: 3.6em;
-      font-weight: 800;
-      line-height: 1.2em;
-  }
-  
-  #bannertop h3{
-      font-weight: 300;
-      font-size: 24px;
-  }
-  
-  /*div hijo del banner*/
-  
-  #fondo {
-      text-align: center;
+  padding-top: 20vh;
+  color: var(--color-body-ligth);
+  min-height: 55vh;
+  display: flex;
+  align-items: center;
+}
+
+#bannertop h2{
+    font-weight: 800;
+}
+
+/*div hijo del banner*/
+
+#fondo {
+    opacity: 0;
+    animation-name: aparicion;
+    animation-duration: 1s;
+    animation-delay: 0.3s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes aparicion {
+    0%{
       opacity: 0;
-      animation-name: aparicion;
-      animation-duration: 1s;
-      animation-delay: 0.3s;
-      animation-fill-mode: forwards;
-  }
-  
-  @keyframes aparicion {
-      0%{
-        opacity: 0;
-        transform: scale(1.4) translateY(-20px);
-      }
-  
-      100%{
-        opacity: 1;
-        transform: scale(1) translateY(0);
-      }
-  }
-  
-  
-  /*boton del baner*/
-  
-  .cssbuttons-io-button {
-    background-image: linear-gradient(-45deg, rgba(31,20,157,1) 5%, rgba(31,130,227,1) 55%, rgba(26,221,202,1) 93%);
-    color: white;
-    font-family: inherit;
-    padding: 0.35em;
-    padding-left: 1.2em;
-    font-size: 17px;
-    border-radius: 10em;
-    border: none;
-    letter-spacing: 0.05em;
-    display: flex;
-    align-items: center;
-    overflow: hidden;
-    position: relative;
-    height: 2.8em;
-    padding-right: 3.3em;
-    cursor: pointer;
-    text-transform: uppercase;
-    font-weight: 500;
-    box-shadow: 0 0px 5px rgb(0, 0, 0);
-    transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
-  }
-  
-  .cssbuttons-io-button .icon {
-    background: white;
-    margin-left: 1em;
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 2.2em;
-    width: 2.2em;
-    border-radius: 10em;
-    right: 0.3em;
-    transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
-  }
-  
-  .cssbuttons-io-button:hover .icon {
-    width: calc(100% - 0.6em);
-  }
-  
-  .cssbuttons-io-button .icon svg {
-    width: 1.1em;
-    transition: transform 0.3s;
-    color: var(--color-details);
-  }
-  
-  .cssbuttons-io-button:hover .icon svg {
-    transform: translateX(0.1em);
-  }
-  
-  .cssbuttons-io-button:active .icon {
-    transform: scale(0.9);
-  }
-  
-  .botones{
-    justify-content: center;
-  }
-  
-  .botones .col-lg-4{
-    display: grid;
-    place-content: center;
-    
-  }
-  .botones button{
-    width: max-content;
-  }
+      transform: scale(1.4) translateY(-20px);
+    }
+
+    100%{
+      opacity: 1;
+      transform: scale(1) translateY(0);
+    }
+}
+
+
+
+/*boton del baner*/
+
+.botones{
+  display: flex;
+  justify-content: center;
+}
+
+.botones .col-lg-5{
+  display: flex;
+  justify-content: center;
+}
+
+.botones .btn{
+  width: 150px;
+  height: 50px;
+}
+
+/* editar para abajo */
 
   /*intro*/ 
 
